--- a/package.json
+++ b/package.json
@@ -3,16 +3,16 @@
   "license": "UNLICENSED",
   "vaadin": {
     "dependencies": {
-      "lit-element": "^2.2.1",
+      "lit-element": "2.4.0",
       "@polymer/polymer": "3.2.0",
       "@webcomponents/webcomponentsjs": "^2.2.10",
       "@vaadin/vaadin-crud": "1.3.0",
-      "@vaadin/vaadin-grid": "5.7.9",
+      "@vaadin/vaadin-grid": "5.7.11",
       "@vaadin/vaadin-icons": "4.3.2",
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha1",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha2",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -23,7 +23,7 @@
       "@vaadin/vaadin-notification": "1.6.1",
       "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha1",
+      "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha2",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -68,7 +68,7 @@
       "construct-style-sheets-polyfill": "2.4.6",
       "extract-loader": "5.1.0"
     },
-    "hash": "b5ef902ff5d12122fe1d4f39c0852b5d1fdc23e5727ef1b15e75dc1da18ecfff"
+    "hash": "691f7414e579a1fc5e601cb16b606a8892682df3e1ef7bf43e747dd9cad7eb19"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -85,7 +85,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha1",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha2",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -93,7 +93,7 @@
     "@vaadin/vaadin-details": "1.2.0",
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
-    "@vaadin/vaadin-grid": "5.7.9",
+    "@vaadin/vaadin-grid": "5.7.11",
     "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
@@ -108,14 +108,14 @@
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha1",
+    "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha2",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.4",
     "@vaadin/vaadin-time-picker": "2.4.0",
     "@vaadin/vaadin-upload": "4.4.1",
     "@webcomponents/webcomponentsjs": "^2.2.10",
-    "lit-element": "^2.2.1"
+    "lit-element": "2.4.0"
   },
   "devDependencies": {
     "chokidar": "^3.5.0",
