--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
       "@vaadin/vaadin-split-layout": "4.3.0",
       "@vaadin/vaadin-combo-box": "5.4.7",
       "@vaadin/vaadin-cookie-consent": "1.2.0",
-      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha2",
+      "@vaadin/vaadin-core-shrinkwrap": "14.6.0-beta1",
       "@vaadin/vaadin-upload": "4.4.1",
       "@vaadin/vaadin-dialog": "2.5.2",
       "@vaadin/vaadin-select": "2.4.0",
@@ -21,9 +21,9 @@
       "@vaadin/vaadin-board": "2.2.0",
       "@vaadin/vaadin-charts": "6.3.1",
       "@vaadin/vaadin-notification": "1.6.1",
-      "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
+      "@vaadin/vaadin-grid-pro": "2.3.0-beta1",
       "@vaadin/vaadin-progress-bar": "1.3.0",
-      "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha2",
+      "@vaadin/vaadin-shrinkwrap": "14.6.0-beta1",
       "@vaadin/vaadin-date-time-picker": "1.4.0",
       "@vaadin/vaadin-ordered-layout": "1.4.0",
       "@vaadin/vaadin-login": "1.2.0",
@@ -68,7 +68,7 @@
       "construct-style-sheets-polyfill": "2.4.6",
       "extract-loader": "5.1.0"
     },
-    "hash": "691f7414e579a1fc5e601cb16b606a8892682df3e1ef7bf43e747dd9cad7eb19"
+    "hash": "28b6493f89b6ebc7161bfec35d991d7a164380492477fcd840d134e546e372de"
   },
   "dependencies": {
     "@polymer/iron-icon": "3.0.1",
@@ -85,7 +85,7 @@
     "@vaadin/vaadin-confirm-dialog": "1.3.0",
     "@vaadin/vaadin-context-menu": "4.5.0",
     "@vaadin/vaadin-cookie-consent": "1.2.0",
-    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-alpha2",
+    "@vaadin/vaadin-core-shrinkwrap": "14.6.0-beta1",
     "@vaadin/vaadin-crud": "1.3.0",
     "@vaadin/vaadin-custom-field": "1.3.0",
     "@vaadin/vaadin-date-picker": "4.4.1",
@@ -94,7 +94,7 @@
     "@vaadin/vaadin-dialog": "2.5.2",
     "@vaadin/vaadin-form-layout": "2.3.0",
     "@vaadin/vaadin-grid": "5.7.11",
-    "@vaadin/vaadin-grid-pro": "2.3.0-alpha1",
+    "@vaadin/vaadin-grid-pro": "2.3.0-beta1",
     "@vaadin/vaadin-icons": "4.3.2",
     "@vaadin/vaadin-item": "2.3.0",
     "@vaadin/vaadin-list-box": "1.4.0",
@@ -108,7 +108,7 @@
     "@vaadin/vaadin-radio-button": "1.5.1",
     "@vaadin/vaadin-rich-text-editor": "1.3.0",
     "@vaadin/vaadin-select": "2.4.0",
-    "@vaadin/vaadin-shrinkwrap": "14.6.0-alpha2",
+    "@vaadin/vaadin-shrinkwrap": "14.6.0-beta1",
     "@vaadin/vaadin-split-layout": "4.3.0",
     "@vaadin/vaadin-tabs": "3.2.0",
     "@vaadin/vaadin-text-field": "2.8.4",
