--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -1,11 +1,11 @@
 tasks:
   - init: mvn install spring-boot:start spring-boot:stop
-
     command: mvn
-ports:
-  - port: 8080
-    onOpen: open-preview
 github:
   prebuilds:
     # enable prebuilds for all branches in this repo
     branches: true 
+
+vscode:
+  extensions:
+    - redhat.java
