--- a/.gitpod.yml
+++ b/.gitpod.yml
@@ -7,3 +7,8 @@ ports:
     onOpen: open-preview
 image:
   file: .gitpod.Dockerfile
+vscode:
+  extensions:
+    - runem.lit-plugin",
+    - vscjava.vscode-java-pack
+    - pivotal.vscode-spring-boot
